# Groot-Rendering-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: release.yml
cmake/: grfConfig.cmake.in
docs/: getting-started.md  index.md
docs/api/: cmd.md  grf.md  gui.md  input.md  math.md  pipelines.md  profiler.md  resources.md  ring.md  shader.md  sync.md  types.md
docs/concepts/: architecture.md  resources.md  shaders.md  synchronization.md
docs/guides/: compute-pass.md  examples.md  first-triangle.md  texture-upload.md
examples/glass_bubbles/: CMakeLists.txt  main.cpp
examples/glass_bubbles/shaders/: frag.gsl  vert.gsl
examples/gravity_particles/: CMakeLists.txt  main.cpp
examples/gravity_particles/shaders/: frag.gsl  physics.gsl  vert.gsl
examples/nbody/: CMakeLists.txt  aabb_debug.cpp  bounds_pass.cpp  brush.cpp  encode_pass.cpp  lbvh_tree.cpp  lvbh_tree.cpp  main.cpp  nbody.hpp  particles.cpp  physics.cpp  radix_sort_pass.cpp  tree.cpp
examples/nbody/shaders/: aabb_frag.gsl  aabb_vert.gsl  aggregate.gsl  bounds_1.gsl  bounds_2.gsl  build.gsl  clear.gsl  density.gsl  encode.gsl  force.gsl  frag.gsl  sort_1.gsl  sort_2.gsl  sort_3.gsl  vert.gsl
examples/nbody/shaders/aabb_debug/: frag.gsl  vert.gsl
examples/nbody/shaders/brush/: frag.gsl  vert.gsl
examples/nbody/shaders/particles/: frag.gsl  vert.gsl
examples/nbody/shaders/physics/: force.gsl
examples/nbody/shaders/tree/: build.gsl  encode.gsl
examples/nbody/shaders/tree/aggregate/: clear.gsl  walk.gsl
examples/nbody/shaders/tree/bounds/: scene.gsl  tile.gsl
examples/nbody/shaders/tree/radix_sort/: histogram.gsl  scatter.gsl
internal/: allocator.hpp  buffer.hpp  cmd.hpp  descriptor_heap.hpp  gpu.hpp  graveyard.hpp  grf.hpp  gui.hpp  image.hpp  input.hpp  log.hpp  pipelines.hpp  profiler.hpp  resource_manager.hpp  shader_manager.hpp  structs.hpp  swapchain_image.hpp  sync.hpp
internal/gsl/: assembler.hpp  lexer.hpp  parser.hpp  shader_manager.hpp  tokens.hpp
internal/resources/: buffer.hpp  image.hpp  resource_manager.hpp  sampler.hpp
public/: buffer.hpp  cmd.hpp  enums.hpp  gpu.hpp  grf.hpp  gui.hpp  image.hpp  img.hpp  input.hpp  math.hpp  pipelines.hpp  profiler.hpp  resources.hpp  ring.hpp  sampler.hpp  shader.hpp  structs.hpp  swapchain_image.hpp  sync.hpp  tex.hpp  types.hpp
src/: CMakeLists.txt  allocator.cpp  buffer.cpp  cmd.cpp  descriptor_heap.cpp  gpu.cpp  grf.cpp  grf_init.cpp  gui.cpp  image.cpp  input.cpp  pipelines.cpp  profiler.cpp  resource_manager.cpp  resources.cpp  shader_manager.cpp  stb.cpp  swapchain_image.cpp  sync.cpp  vma.cpp
src/gsl/: assembler.cpp  lexer.cpp  parser.cpp  shader.cpp  shader_manager.cpp
src/resources/: buffer.cpp  image.cpp  img.cpp  resource_manager.cpp  sampler.cpp  tex.cpp
tests/: CMakeLists.txt  allocation.cpp  assembler.cpp  cmd.cpp  destruction.cpp  end_to_end.cpp  frame.cpp  lexer.cpp  parser.cpp  pipelines.cpp  render.cpp  resource_update.cpp  ring.cpp  shaders.cpp  test.cpp
tests/gsl/: assembler.cpp  parser.cpp
tests/shaders/: compute_buffers.gsl  compute_minimal.gsl  compute_workgroup.gsl  graphics_minimal.frag.gsl  graphics_pulled_vertex.frag.gsl  graphics_pulled_vertex.vert.gsl  triangle.frag.gsl  triangle.vert.gsl  vertex.gsl
